--- a/portfolio-details-vid.html
+++ b/portfolio-details-vid.html
@@ -41,12 +41,7 @@
 
           <div class="col-lg-8">
             <h2 class="portfolio-title">Portofolio Detail</h2>
-
-
-                  <video height="auto" width="100%" controls >
-                    <source src="assets/img/portfolio/vid-1.mp4" alt=""  /> 
-                  </video>
-               
+                <iframe src="https://drive.google.com/file/d/1e77x6dKP_l0u68knD7Z2DsIYkj6hnZ2_/preview" width="720" height="420" allow="autoplay"></iframe>
           </div>
 
 
