--- a/portfolio-details-vid2.html
+++ b/portfolio-details-vid2.html
@@ -41,11 +41,7 @@
 
           <div class="col-lg-8">
             <h2 class="portfolio-title">Portofolio Detail</h2>
-
-
-                  <video height="auto" width="100%" controls >
-                    <source src="assets/img/portfolio/vid-2.mp4" alt=""  /> 
-                  </video>
+              <iframe src="https://drive.google.com/file/d/1iIHNPfXGWkPCw-4wvbuXIvFddNbnxyPs/preview" width="720" height="420" allow="autoplay"></iframe>
                
           </div>
 
